--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
     <body style="background-color:#0AB68A;">
-   <h2>I dont really know how to code in all honesty and most of these things are really confusing. However this class is really fun and so far not to complex. We did this marble thing that was fun. </h2>
+        
+   <p>
+       <b>Entry #1:</b> I dont really know how to code in all honesty and most of these things are really confusing. However this class is really fun and so far not to complex. We did this marble thing that was fun. 
+   </p>
   
     <marquee>BOO</marquee>
     hello <hr> <marquee>wassdf </marquee>olleh
