--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <html>
     <body style="background-color:#0AB68A;">
         
-   <p>
        <b>Entry #1:</b> I dont really know how to code in all honesty and most of these things are really confusing. However this class is really fun and so far not to complex. We did this marble thing that was fun. 
-   </p>
-  
-    <marquee>BOO</marquee>
-    hello <hr> <marquee>wassdf </marquee>olleh
+   
+  <b>Entry #2:</b> Today we worked on our Rube Goldburg project and we had to scrap a fair amount of our CAD since we started to fall behind in the physical building. I think it was better that way because some of the CAD elements were sketchy and didnt actualy work. 
     <a href="google.com">not google</a>
     <img scr="wm7jybwrd8461.jpg">
 
