--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
     <body style="background-color:#0AB68A;">
         
        <b>Entry #1:</b> I dont really know how to code in all honesty and most of these things are really confusing. However this class is really fun and so far not to complex. We did this marble thing that was fun. 
-   <br>
+   <br> <hr>
   <b>Entry #2:</b> Today we worked on our Rube Goldburg project and we had to scrap a fair amount of our CAD since we started to fall behind in the physical building. I think it was better that way because some of the CAD elements were sketchy and didnt actualy work. 
-    <br>
-    <b>Entry #3:</b> We finished our RG project and ours actualy worked proporly. We ended and did a callene where we had to desieng the letter E.
-    </b>
+    <br> <hr>
+    <b>Entry #3:</b> We finished our RG project and ours actualy worked proporly. We ended and did a callene where we had to desieng the letter E.I made my dementions imposible to create and Dominic had a WONDERFUL time with it.
+    <br> <hr>
+    <b>Entry #4:</b> 
     <a href="google.com">not google</a>
     <img scr="wm7jybwrd8461.jpg">
 </html>
