--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <html>
     <body style="background-color:#0AB68A;">
-        
+     <hr>
+     <b><h1><marquee>WILLIE'S WEBSITE</marquee></h1></b>
+      <hr>
        <b>Entry #1:</b> I dont really know how to code in all honesty and most of these things are really confusing. However this class is really fun and so far not to complex. We did this marble thing that was fun. 
    <br> <hr>
   <b>Entry #2:</b> Today we worked on our Rube Goldburg project and we had to scrap a fair amount of our CAD since we started to fall behind in the physical building. I think it was better that way because some of the CAD elements were sketchy and didnt actualy work. 
     <br> <hr>
     <b>Entry #3:</b> We finished our RG project and ours actualy worked proporly. We ended and did a callene where we had to desieng the letter E.I made my dementions imposible to create and Dominic had a WONDERFUL time with it.
     <br> <hr>
-    <b>Entry #4:</b> 
+    <b>Entry #4:</b> We started and finished making a robtic hand to pick up a cup. It was made out of cardboard, string, and rubber bands. Our team had a really solid desighem but the fingers were over desined and it would have been easier ways to get the same result. 
+    <br> <hr>
     <a href="google.com">not google</a>
     <img scr="wm7jybwrd8461.jpg">
 </html>
