--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <br> <hr>
     <b>Entry #4:</b> We started and finished making a robtic hand to pick up a cup. It was made out of cardboard, string, and rubber bands. Our team had a really solid desighem but the fingers were over desined and it would have been easier ways to get the same result. 
     <br> <hr>
+    <b>Entry #5:</b> This week we started our bottle rocket project. Our group's CAD got finished pretty quick and like always, it looked pretty good. The actual build got finished quick to since we had 5 people in our team. 
+    <br> <hr>
+    <b>Entry #6:</b> 
+    I wont lie i thought this would be more creative. like we are making a website from the ground up but Wix would be better to make a profeshinal porfolio.
     <a href="google.com">not google</a>
     <img scr="wm7jybwrd8461.jpg">
 </html>
