--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <br> <hr>
     <b>Entry #5:</b> This week we started our bottle rocket project. Our group's CAD got finished pretty quick and like always, it looked pretty good. The actual build got finished quick to since we had 5 people in our team. 
     <br> <hr>
-    <b>Entry #6:</b> 
+    <b>Entry #6:</b> We finaly launched our bottle rockets today. Our team's rocket was made of a Minute Maid bottle and it actualy went far in comparison to the other rockets. A couple of the rockets turned around and flew backewards toward our class. It was pretty fun.
+    <br> <hr>
     I wont lie i thought this would be more creative. like we are making a website from the ground up but Wix would be better to make a profeshinal porfolio.
     <a href="google.com">not google</a>
     <img scr="wm7jybwrd8461.jpg">
