--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
      <hr>
      <b><h1><marquee>WILLIE'S WEBSITE</marquee></h1></b>
       <hr>
-       <b>Entry #1:</b> I dont really know how to code in all honesty and most of these things are really confusing. However this class is really fun and so far not to complex. We did this marble thing that was fun. 
+       <b>Entry #1:</b> I dont really know how to code in all honesty and most of these things are really confusing. However this class is really fun and so far not too complex. We had a competition to get a marble in a jar by moving it through plastic pipes. We wernt aloud to touch the marble and it had to always be moving. 
    <br> <hr>
   <b>Entry #2:</b> Today we worked on our Rube Goldburg project and we had to scrap a fair amount of our CAD since we started to fall behind in the physical building. I think it was better that way because some of the CAD elements were sketchy and didnt actualy work. 
     <br> <hr>
-    <b>Entry #3:</b> We finished our RG project and ours actualy worked proporly. We ended and did a callene where we had to desieng the letter E.I made my dementions imposible to create and Dominic had a WONDERFUL time with it.
+    <b>Entry #3:</b> We finished our RG project and ours actualy worked properly. We ended and did a challenge where we had to design the letter E. I made my dimensions imposible to create and Dominic had a WONDERFUL time with it.
     <br> <hr>
-    <b>Entry #4:</b> We started and finished making a robtic hand to pick up a cup. It was made out of cardboard, string, and rubber bands. Our team had a really solid desighem but the fingers were over desined and it would have been easier ways to get the same result. 
+    <b>Entry #4:</b> We started and finished making a robtic hand to pick up a cup. It was made out of cardboard, string, and rubber bands. Our team had a really solid design but the fingers were over-designed and there were easier ways to get the same result.
     <br> <hr>
-    <b>Entry #5:</b> This week we started our bottle rocket project. Our group's CAD got finished pretty quick and like always, it looked pretty good. The actual build got finished quick to since we had 5 people in our team. 
+    <b>Entry #5:</b> This week we started our bottle rocket project. Our group's CAD got finished pretty quickly and, like always, it looked pretty good. The actual build got finished quickly too, since we had 5 people in our team. 
     <br> <hr>
-    <b>Entry #6:</b> We finaly launched our bottle rockets today. Our team's rocket was made of a Minute Maid bottle and it actualy went far in comparison to the other rockets. A couple of the rockets turned around and flew backewards toward our class. It was pretty fun.
+    <b>Entry #6:</b> We finaly launched our bottle rockets today. Our team's rocket was made of a Minute Maid bottle and it actualy went far in comparison to the other rockets. A couple of the rockets turned around and flew backwards toward our class. It was pretty fun.
     <br> <hr>
-    I wont lie i thought this would be more creative. like we are making a website from the ground up but Wix would be better to make a profeshinal porfolio.
     <a href="google.com">not google</a>
     <img scr="wm7jybwrd8461.jpg">
 </html>
