--- a/index.html
+++ b/index.html
@@ -43,10 +43,230 @@
     <p><p><b>Entry #6:</b> We finaly launched our bottle rockets today. Our team's rocket was made of a Minute Maid bottle and it actualy went far in comparison to the other rockets. A couple of the rockets turned around and flew backwards toward our class. It was pretty fun. </p>
     <br> <hr style="height:0.5%;text-align:left;margin-left:0">
    <p><p><b>Entry #7</b> Today we attempted to filter dirty water. We were only given cotton, bottles, dirt, sand and rocks. 
+    <img src = "Filter02.png" width = "576px" height = "768">
     <a href="google.com">not google</a>
     <img scr="wm7jybwrd8461.jpg">
 
 </html>bbbbbbbbbbbb
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
