--- a/index.html
+++ b/index.html
@@ -55,11 +55,20 @@
    <p><p><b>Entry #7</b> Today we attempted to filter dirty water. We were only given cotton, bottles, dirt, sand and rocks. We had a couple methods to use and started by layering the cotton, then lots of sand, then small rocks, then finally big rocks.
     <img src = "Filter02.png" width = "576px" height = "768">
      <br> <hr style="height:0.5%;text-align:left;margin-left:0">
+    
     <p><p><b>Entry #8</b> Today we started our electical engineering unit and we worked with bread boards. The electrical currents and flow were completey new topics for me. I would like to say nothing exploded, but our first LED light sparked violently when we plugged each side into a diffrent current. </p>
     <img src= "breadboard.jpeg" width= "400" height= "300">
    <br> <hr style="height:0.5%;text-align:left;margin-left:0"> 
+  
    <p><p><b>Entry #9</b> Today we finished and pitched our buisness. We learned about how a project is managed and how busnisses are funnded. The idea that we had to pitch to the class was a blue tooth basketball. It wasnt the greatest idea but the pitch went well anyway. </p>
     <img src = "slide show.png" width = "400px" height = "350"> 
+    <br> <hr style="height:0.5%;text-align:left;margin-left:0"> 
+   
+   <p><p><b>Entry #10</b> We started our civil enginering lesson today and we are going to be making a spagetie bridge that is 2 feet long. We are given 40 pieces to make the bridge. </p>
+      <br> <hr style="height:0.5%;text-align:left;margin-left:0"> 
+      
+      <p><p><b>Entry #11</b> Today we finished and tested the bridge to see how much weight it can hold. We used water to aply the weight to the bridge. Our desigen was two thick beams conected by short pices in the middle. On the top of the bridge we had piramed supports. </p>
+   
     <use>hi whats good</use>
     <<button type="submit"><a herf="google.com>not google<a/></button></button>
     <a href="google.com">not google</a>
